--- a/DatingApp-SPA/src/app/members/member-card/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card/member-card.component.html
@@ -3,7 +3,7 @@
     <img class="card-img-top" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
     <ul class="list-inline member-icon animate text-center">
       <li class="list-inline-item">
-        <button class="btn-primary">
+        <button class="btn-primary" [routerLink]="['/members/', user.id]">
           <i class="fa fa-user"></i>
         </button>
         <button class="btn-primary">
